Dictionaries storage in DB, not in files. Laps renamed to Levels. Save disabled until TeamLevelPoints table created.

--- a/terminal/res/values/strings.xml
+++ b/terminal/res/values/strings.xml
@@ -4,31 +4,21 @@
     <string name="app_name">MMB-terminal</string>
     <string name="global_input_mode_start">Start</string>
     <string name="global_input_mode_finish">Finish</string>
-    <string name="main_login">Login</string>
-    <string name="main_change_user">Change user</string>
     <string name="main_input_data">Input data</string>
-    <string name="main_no_active_user">&lt;Not logged in></string>
+    <string name="main_title">MMB terminal</string>
     <string name="main_progress_loading">Loading...</string>
-    <string name="main_must_login">Error. Log in first.</string>
-    <string name="login_login">Login:</string>
-    <string name="login_password">Password:</string>
-    <string name="login_ok">OK</string>
-    <string name="login_title_login">Login</string>
-    <string name="login_title_change">Change user</string>
-    <string name="login_status_bad">Invalid user/password</string>
-    <string name="login_prompt_user_name">Select user name</string>
-    <string name="input_start_select_lap">Select lap</string>
+    <string name="input_start_select_level">Select level</string>
     <string name="input_start_no_distance">&lt;No distance selected></string>
-    <string name="input_start_no_lap">&lt;No lap selected></string>
+    <string name="input_start_no_level">&lt;No lap selected></string>
     <string name="input_start_no_mode">&lt;Input mode undefined></string>
     <string name="input_start_proceed_input">Proceed input</string>
-    <string name="input_global_no_selected_lap">&lt;No lap selected></string>
-    <string name="input_lap_distance">Distance:</string>
-    <string name="input_lap_prompt_distance">Select distance</string>
-    <string name="input_lap_lap">Lap:</string>
-    <string name="input_lap_prompt_lap">Select lap</string>
-    <string name="input_lap_input_mode">Input mode:</string>
-    <string name="input_lap_ok">OK</string>
+    <string name="input_global_no_selected_level">&lt;No level selected></string>
+    <string name="input_level_distance">Distance:</string>
+    <string name="input_level_prompt_distance">Select distance</string>
+    <string name="input_level_level">Level:</string>
+    <string name="input_level_prompt_level">Select level</string>
+    <string name="input_level_input_mode">Input mode:</string>
+    <string name="input_level_ok">OK</string>
     <string name="input_team_refresh_data">Refresh teams</string>
     <string name="input_team_filter_clear">Clear filter</string>
     <string name="input_team_filter_hide">Hide filter</string>
