--- a/terminal/res/values/strings.xml
+++ b/terminal/res/values/strings.xml
@@ -5,7 +5,10 @@
     <string name="global_input_mode_start">Start</string>
     <string name="global_input_mode_finish">Finish</string>
     <string name="main_input_data">Input data</string>
+    <string name="main_import_data">Import</string>
+    <string name="main_export_data">Export</string>
     <string name="main_title">MMB terminal</string>
+    <string name="main_settings">Settings</string>
     <string name="main_progress_loading">Loading...</string>
     <string name="input_start_select_level">Select level</string>
     <string name="input_start_no_distance">&lt;No distance selected></string>
@@ -57,5 +60,42 @@
     <string name="input_withdraw_already_withdrawn">Already withdrawn</string>
     <string name="input_withdraw_res_members">Members to withdraw:</string>
     <string name="input_withdraw_res_no_members">&lt;Nobody selected></string>
+    <string name="file_dialog_location">Location</string>
+    <string name="file_dialog_cant_read_folder">folder can\'t be read!</string>
+    <string name="file_dialog_new">New</string>
+    <string name="file_dialog_select">Select</string>
+    <string name="file_dialog_file_name">File name:</string>
+    <string name="file_dialog_cancel">Cancel</string>
+    <string name="file_dialog_create">Save</string>
+    <string name="file_dialog_no_data">No Data</string>
+    <string name="file_dialog_err">Error</string>
+    <string name="transp_import_title">Import</string>
+    <string name="transp_import_select_file">Choose import file</string>
+    <string name="transp_import_no_file_selected">&lt;No file selected></string>
+    <string name="transp_import_start">Start</string>
+    <string name="transp_import_stop">Stop</string>
+    <string name="transp_import_current_table">Current table:</string>
+    <string name="transp_import_no_table">&lt;Unknown></string>
+    <string name="transp_import_rows_processed">Rows processed:</string>
+    <string name="transp_import_no_rows">&lt;Unknown></string>
+    <string name="settings_title">Settings</string>
+    <string name="settings_save">Apply</string>
+    <string name="settings_device_id">Device ID:</string>
+    <string name="settings_user_id">User ID:</string>
+    <string name="settings_current_raid_id">Current raid ID:</string>
+    <string name="settings_last_export_date">Last export:</string>
+    <string name="settings_transp_user_id">Transport user ID:</string>
+    <string name="settings_transp_user_password">Transport user password:</string>
+    <string name="settings_applied">Settings applied</string>
+    <string name="transp_export_title">Export</string>
+    <string name="transp_export_full">Export full</string>
+    <string name="transp_export_incremental">Export incremental</string>
+    <string name="transp_export_last_export_date">Last export date:</string>
+    <string name="transp_export_no_last_export">&lt;Unknown></string>
+    <string name="transp_export_error">Export failed.</string>
+    <string name="transp_export_success">Export success.</string>
+    <string name="transp_export_running">Running</string>
+
+    <color name="file_dialog_gray">#ffff0000</color>
 
 </resources>
