--- a/terminal/res/values-ru/strings.xml
+++ b/terminal/res/values-ru/strings.xml
@@ -44,6 +44,7 @@
     <string name="input_team_filter_status_member">Участник:</string>
     <string name="input_team_filter_status_empty">Без фильтра</string>
     <string name="input_data_no_team">&lt;Команда не выбрана></string>
+    <string name="input_data_no_team_number">333</string>
     <string name="input_data_time_now">Сейчас</string>
     <string name="input_data_check_all">Все</string>
     <string name="input_data_check_nothing">Очистить</string>
@@ -98,7 +99,5 @@
     <string name="transp_export_error">Ошибка экспорта.</string>
     <string name="transp_export_success">Экспорт завершён.</string>
     <string name="transp_export_running">В процессе</string>
-
-    <color name="file_dialog_gray">#ffff0000</color>
 
 </resources>
