--- a/terminal/res/values/strings.xml
+++ b/terminal/res/values/strings.xml
@@ -45,6 +45,7 @@
     <string name="input_team_filter_status_member">Member:</string>
     <string name="input_team_filter_status_empty">No filter</string>
     <string name="input_data_no_team">&lt;No team selected></string>
+    <string name="input_data_no_team_number">333</string>
     <string name="input_data_time_now">Now</string>
     <string name="input_data_check_all">Check all</string>
     <string name="input_data_check_nothing">Clear</string>
@@ -99,7 +100,5 @@
     <string name="transp_export_error">Export failed.</string>
     <string name="transp_export_success">Export success.</string>
     <string name="transp_export_running">Running</string>
-
-    <color name="file_dialog_gray">#ffff0000</color>
 
 </resources>
