--- a/terminal/res/values-ru/strings.xml
+++ b/terminal/res/values-ru/strings.xml
@@ -4,6 +4,10 @@
     <string name="app_name">ММБ-терминал</string>
     <string name="global_input_mode_start">Старт</string>
     <string name="global_input_mode_finish">Финиш</string>
+    <string name="main_database_file">Файл БД:</string>
+    <string name="main_database_connection_NOK">Нет подключения к БД</string>
+    <string name="main_database_connection_OK">Есть подключение к БД</string>
+    <string name="main_current_raid_id">ID текущего ММБ:</string>
     <string name="main_input_data">Ввод данных</string>
     <string name="main_import_data">Импорт</string>
     <string name="main_export_data">Экспорт</string>
@@ -63,7 +67,8 @@
     <string name="transp_import_rows_processed">Обработано строк:</string>
     <string name="transp_import_no_rows">&lt;Неизвестно></string>
     <string name="settings_title">Настройки</string>
-    <string name="settings_save">Применить</string>
+    <string name="settings_path_to_terminal_db">terminal.db:</string>
+    <string name="settings_select_terminal_db_file">Выбрать файл</string>
     <string name="settings_device_id">Device ID:</string>
     <string name="settings_user_id">User ID:</string>
     <string name="settings_current_raid_id">ID текущего ММБ:</string>
