--- a/terminal/res/values-ru/strings.xml
+++ b/terminal/res/values-ru/strings.xml
@@ -4,9 +4,11 @@
     <string name="app_name">ММБ-терминал</string>
     <string name="global_input_mode_start">Старт</string>
     <string name="global_input_mode_finish">Финиш</string>
-    <string name="main_database_file">Файл БД:</string>
+    <string name="main_database_file">Файл БД: %s</string>
     <string name="main_database_connection_NOK">Нет подключения к БД</string>
     <string name="main_database_connection_OK">Есть подключение к БД</string>
+    <string name="main_user_id">ID пользователя: %d</string>
+    <string name="main_device_id">ID устройства: %d</string>
     <string name="main_current_raid_id">ID текущего ММБ:</string>
     <string name="main_input_data">Ввод данных</string>
     <string name="main_import_data">Импорт</string>
