Поддержка сканеров штрих-кода реализована полностью.

--- a/terminal/doc_work/changelog.txt
+++ b/terminal/doc_work/changelog.txt
@@ -1,5 +1,28 @@
 ChangeLog
 
+------------- terminal-v1.4 -------------
+
+Проект переведён на API-18, с поддержкой версий до API-7;
+
+Доработки:
+1) Добавлена работа со сканерами штрих-кодов;
+2) Настройки сохраняются в кеше приложения, а не в БД;
+2а) Путь к БД теперь не задаётся жёстко. Можно выбрать любой файл на устройстве;
+2б) Можно импортировать файл с настройками с сайта (ID юзера, девайса, пароль);
+3) Формы перевёрстаны под альбомную раскладку для удобства работы 
+   с экранами 600 пикселов высотой;
+4) Созданы все нужные условия для Eclipse -> Export... release-версии (keystore, proguard).
+
+
+------------- terminal-v1.3 -------------
+
+Доработки:
+1) Форма поиска команды переделана в History.
+   Теперь оператор работает в постоянном режиме быстрого ввода,
+   а видит он список введённых записей;
+2) Небольшие доработки интерфейса.
+
+
 ------------- terminal-v1.2 -------------
 
 Исправленны баги:
