--- a/terminal/res/values/strings.xml
+++ b/terminal/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string name="input_start_no_level">&lt;No level selected></string>
     <string name="input_start_no_mode">&lt;Input mode undefined></string>
     <string name="input_start_proceed_input">Proceed input</string>
+    <string name="input_start_scan_bar_codes">Bar-codes scan</string>
     <string name="input_global_no_selected_level">&lt;No level selected></string>
     <string name="input_level_distance">Distance:</string>
     <string name="input_level_prompt_distance">Select distance</string>
@@ -31,6 +32,8 @@
     <string name="input_level_ok">OK</string>    
     <string name="input_history_team_number">Team number:</string>
     <string name="input_history_team_not_found">Team [${teamNumber}] not found</string>
+    <string name="input_barcode_scan">Barcode:</string>
+    <string name="input_barcode_scans_count">Scanned: %d</string>
     <string name="input_data_no_team">&lt;No team selected></string>
     <string name="input_data_no_team_number">333</string>
     <string name="input_data_time_now">Now</string>
@@ -72,6 +75,7 @@
     <string name="settings_title">Settings</string>
     <string name="settings_path_to_terminal_db">terminal.db:</string>
     <string name="settings_select_terminal_db_file">Select file</string>
+    <string name="settings_import_device_json">Import device.json</string>
     <string name="settings_device_id">Device ID:</string>
     <string name="settings_user_id">User ID:</string>
     <string name="settings_current_raid_id">Current raid ID:</string>
@@ -81,11 +85,20 @@
     <string name="settings_team_clear_filter">Clear team filter after OK:</string>
     <string name="settings_team_fast_select">Fast team select:</string>
     <string name="settings_applied">Settings applied</string>
+    <string name="settings_json_dialog_title">Select device</string>
     <string name="transp_export_title">Export</string>
-    <string name="transp_export_full">Export full</string>
-    <string name="transp_export_incremental">Export incremental</string>
-    <string name="transp_export_last_export_date">Last export date:</string>
-    <string name="transp_export_no_last_export">&lt;Unknown></string>
+    <string name="transp_export_data_title">Export data</string>
+    <string name="transp_export_data_full">Export full</string>
+    <string name="transp_export_data_incremental">Export incremental</string>
+    <string name="transp_export_data_last_export_date">Last export date:</string>
+    <string name="transp_export_data_no_last_export">&lt;Unknown></string>
+    <string name="transp_export_barcode_title">Export barcode data</string>
+    <string name="transp_export_barcode_no_levelpoint">&lt;No levelpoint></string>
+    <string name="transp_export_barcode_select_levelpoint">Levelpoint</string>
+    <string name="transp_export_barcode_full">Export full</string>
+    <string name="transp_export_barcode_incremental">Export incremental</string>
+    <string name="transp_export_barcode_last_export_date">Last export date:</string>
+    <string name="transp_export_barcode_no_last_export">&lt;Unknown></string>
     <string name="transp_export_error">Export failed.</string>
     <string name="transp_export_success">Export success.</string>
     <string name="transp_export_running">Running</string>
