--- a/terminal/res/values-ru/strings.xml
+++ b/terminal/res/values-ru/strings.xml
@@ -9,7 +9,7 @@
     <string name="main_database_connection_OK">Есть подключение к БД</string>
     <string name="main_user_id">ID пользователя: %d</string>
     <string name="main_device_id">ID устройства: %d</string>
-    <string name="main_current_raid_id">ID текущего ММБ:</string>
+    <string name="main_current_raid_id">ID текущего ММБ: %d</string>
     <string name="main_input_data">Ввод данных</string>
     <string name="main_import_data">Импорт</string>
     <string name="main_export_data">Экспорт</string>
@@ -21,6 +21,7 @@
     <string name="input_start_no_level">&lt;Этап не выбран></string>
     <string name="input_start_no_mode">&lt;Режим ввода не выбран></string>
     <string name="input_start_proceed_input">Ввод данных</string>
+    <string name="input_start_scan_bar_codes">Ввод штрих-кодов</string>
     <string name="input_global_no_selected_level">&lt;Этап не выбран></string>
     <string name="input_level_distance">Дистанция:</string>
     <string name="input_level_prompt_distance">Выбор дистанции</string>
@@ -30,6 +31,8 @@
     <string name="input_level_ok">ОК</string>
     <string name="input_history_team_number">Номер команды:</string>
     <string name="input_history_team_not_found">Команда [${teamNumber}] не найдена</string>
+    <string name="input_barcode_scan">Штрих-код:</string>
+    <string name="input_barcode_scans_count">Отсканировано: %d</string>
     <string name="input_data_no_team">&lt;Команда не выбрана></string>
     <string name="input_data_no_team_number">333</string>
     <string name="input_data_time_now">Сейчас</string>
@@ -71,6 +74,7 @@
     <string name="settings_title">Настройки</string>
     <string name="settings_path_to_terminal_db">terminal.db:</string>
     <string name="settings_select_terminal_db_file">Выбрать файл</string>
+    <string name="settings_import_device_json">Импорт device.json</string>
     <string name="settings_device_id">Device ID:</string>
     <string name="settings_user_id">User ID:</string>
     <string name="settings_current_raid_id">ID текущего ММБ:</string>
@@ -80,11 +84,20 @@
     <string name="settings_team_clear_filter">Очищать фильтр после успешного ввода:</string>
     <string name="settings_team_fast_select">Режим быстрого выбора команды:</string>
     <string name="settings_applied">Настройки сохранены</string>
+    <string name="settings_json_dialog_title">Выбор планшета</string>
     <string name="transp_export_title">Экспорт</string>
-    <string name="transp_export_full">Полный</string>
-    <string name="transp_export_incremental">Накопительный</string>
-    <string name="transp_export_last_export_date">Последняя дата экспорта:</string>
-    <string name="transp_export_no_last_export">&lt;Неизвестна></string>
+    <string name="transp_export_data_title">Экспорт данных</string>
+    <string name="transp_export_data_full">Полный</string>
+    <string name="transp_export_data_incremental">Накопительный</string>
+    <string name="transp_export_data_last_export_date">Последняя дата экспорта:</string>
+    <string name="transp_export_data_no_last_export">&lt;Неизвестна></string>
+    <string name="transp_export_barcode_title">Экспорт данных со сканеров штрих-кодов</string>
+    <string name="transp_export_barcode_no_levelpoint">&lt;Не выбрана контрольная точка></string>
+    <string name="transp_export_barcode_select_levelpoint">Контрольная точка</string>
+    <string name="transp_export_barcode_full">Полный</string>
+    <string name="transp_export_barcode_incremental">Накопительный</string>
+    <string name="transp_export_barcode_last_export_date">Последняя дата экспорта:</string>
+    <string name="transp_export_barcode_no_last_export">&lt;Неизвестна></string>
     <string name="transp_export_error">Ошибка экспорта.</string>
     <string name="transp_export_success">Экспорт завершён.</string>
     <string name="transp_export_running">В процессе</string>
