Изменен исходный код для перехода от Level к LevelPoint. Работа со сканерами штрих-кодов удалена из приложения полностью.

--- a/terminal/res/values-ru/strings.xml
+++ b/terminal/res/values-ru/strings.xml
@@ -16,23 +16,15 @@
     <string name="main_title">ММБ терминал</string>
     <string name="main_settings">Настройки</string>
     <string name="main_progress_loading">Загрузка...</string>
-    <string name="input_start_select_level">Выбор этапа</string>
-    <string name="input_start_no_distance">&lt;Дистанция не выбрана></string>
-    <string name="input_start_no_level">&lt;Этап не выбран></string>
-    <string name="input_start_no_mode">&lt;Режим ввода не выбран></string>
+    <string name="input_start_select_scan_point">Выбор точки ввода</string>
+    <string name="input_start_no_scan_point">&lt;Точка ввода не выбрана></string>
     <string name="input_start_proceed_input">Ввод данных</string>
-    <string name="input_start_scan_bar_codes">Ввод штрих-кодов</string>
-    <string name="input_global_no_selected_level">&lt;Этап не выбран></string>
-    <string name="input_level_distance">Дистанция:</string>
-    <string name="input_level_prompt_distance">Выбор дистанции</string>
-    <string name="input_level_level">Этап:</string>
-    <string name="input_level_prompt_level">Выбор этапа</string>
-    <string name="input_level_input_mode">Режим ввода:</string>
-    <string name="input_level_ok">ОК</string>
+    <string name="input_global_no_selected_scan_point">&lt;Не выбрана точка ввода></string>
+    <string name="input_scan_point_scan_point">Точка ввода:</string>
+    <string name="input_scan_point_prompt_scan_point">Выберите точку ввода</string>
+    <string name="input_scan_point_ok">ОК</string>
     <string name="input_history_team_number">Номер команды:</string>
     <string name="input_history_team_not_found">Команда [${teamNumber}] не найдена</string>
-    <string name="input_barcode_scan">Штрих-код:</string>
-    <string name="input_barcode_scans_count">Отсканировано: %d</string>
     <string name="input_data_no_team">&lt;Команда не выбрана></string>
     <string name="input_data_no_team_number">333</string>
     <string name="input_data_time_now">Сейчас</string>
@@ -92,13 +84,6 @@
     <string name="transp_export_data_incremental">Накопительный</string>
     <string name="transp_export_data_last_export_date">Последняя дата экспорта:</string>
     <string name="transp_export_data_no_last_export">&lt;Неизвестна></string>
-    <string name="transp_export_barcode_title">Экспорт данных со сканеров штрих-кодов</string>
-    <string name="transp_export_barcode_no_levelpoint">&lt;Не выбрана контрольная точка></string>
-    <string name="transp_export_barcode_select_levelpoint">Контрольная точка</string>
-    <string name="transp_export_barcode_full">Полный</string>
-    <string name="transp_export_barcode_incremental">Накопительный</string>
-    <string name="transp_export_barcode_last_export_date">Последняя дата экспорта:</string>
-    <string name="transp_export_barcode_no_last_export">&lt;Неизвестна></string>
     <string name="transp_export_error">Ошибка экспорта.</string>
     <string name="transp_export_success">Экспорт завершён.</string>
     <string name="transp_export_running">В процессе</string>
