--- a/terminal/res/values/strings.xml
+++ b/terminal/res/values/strings.xml
@@ -17,23 +17,15 @@
     <string name="main_settings">Settings</string>
     <string name="main_fill_data">Fill test data</string>
     <string name="main_progress_loading">Loading...</string>
-    <string name="input_start_select_level">Select level</string>
-    <string name="input_start_no_distance">&lt;No distance selected></string>
-    <string name="input_start_no_level">&lt;No level selected></string>
-    <string name="input_start_no_mode">&lt;Input mode undefined></string>
+    <string name="input_start_select_scan_point">Select input point</string>
+    <string name="input_start_no_scan_point">&lt;No input point selected></string>
     <string name="input_start_proceed_input">Proceed input</string>
-    <string name="input_start_scan_bar_codes">Bar-codes scan</string>
-    <string name="input_global_no_selected_level">&lt;No level selected></string>
-    <string name="input_level_distance">Distance:</string>
-    <string name="input_level_prompt_distance">Select distance</string>
-    <string name="input_level_level">Level:</string>
-    <string name="input_level_prompt_level">Select level</string>
-    <string name="input_level_input_mode">Input mode:</string>
-    <string name="input_level_ok">OK</string>    
+    <string name="input_global_no_selected_scan_point">&lt;No input point selected></string>
+    <string name="input_scan_point_scan_point">Input point:</string>
+    <string name="input_scan_point_prompt_scan_point">Select input point</string>
+    <string name="input_scan_point_ok">OK</string>
     <string name="input_history_team_number">Team number:</string>
     <string name="input_history_team_not_found">Team [${teamNumber}] not found</string>
-    <string name="input_barcode_scan">Barcode:</string>
-    <string name="input_barcode_scans_count">Scanned: %d</string>
     <string name="input_data_no_team">&lt;No team selected></string>
     <string name="input_data_no_team_number">333</string>
     <string name="input_data_time_now">Now</string>
@@ -93,13 +85,6 @@
     <string name="transp_export_data_incremental">Export incremental</string>
     <string name="transp_export_data_last_export_date">Last export date:</string>
     <string name="transp_export_data_no_last_export">&lt;Unknown></string>
-    <string name="transp_export_barcode_title">Export barcode data</string>
-    <string name="transp_export_barcode_no_levelpoint">&lt;No levelpoint></string>
-    <string name="transp_export_barcode_select_levelpoint">Levelpoint</string>
-    <string name="transp_export_barcode_full">Export full</string>
-    <string name="transp_export_barcode_incremental">Export incremental</string>
-    <string name="transp_export_barcode_last_export_date">Last export date:</string>
-    <string name="transp_export_barcode_no_last_export">&lt;Unknown></string>
     <string name="transp_export_error">Export failed.</string>
     <string name="transp_export_success">Export success.</string>
     <string name="transp_export_running">Running</string>
