--- a/terminal/res/values-ru/strings.xml
+++ b/terminal/res/values-ru/strings.xml
@@ -12,6 +12,7 @@
     <string name="main_current_raid_id">ID текущего ММБ: %d</string>
     <string name="main_input_data">Ввод данных</string>
     <string name="main_import_data">Импорт</string>
+    <string name="main_import_barcode_data">Импорт штрих-кодов</string>
     <string name="main_export_data">Экспорт</string>
     <string name="main_title">ММБ терминал</string>
     <string name="main_settings">Настройки</string>
@@ -57,7 +58,11 @@
     <string name="file_dialog_no_data">Нет данных</string>
     <string name="file_dialog_err">Ошибка</string>
     <string name="transp_import_title">Импорт</string>
-    <string name="transp_import_select_file">Выберите файл импорта</string>
+    <string name="transp_import_dicts_title">Импорт справочников</string>
+    <string name="transp_import_barcode_title">Импорт данных со сканера штрих-кодов</string>
+    <string name="transp_import_barcode_select_scan_point">Выбор точки ввода</string>
+    <string name="transp_import_barcode_no_scan_point">&lt;Точка ввода не выбрана></string>
+    <string name="transp_import_select_file">Выбор файла импорта</string>
     <string name="transp_import_no_file_selected">&lt;Файл не выбран></string>
     <string name="transp_import_start">Старт</string>
     <string name="transp_import_stop">Стоп</string>
