Версия 1.5. Обновлено описание. Создан пакет инсталляции.

--- a/terminal/doc_work/changelog.txt
+++ b/terminal/doc_work/changelog.txt
@@ -1,5 +1,20 @@
 ChangeLog
 
+------------- terminal-v1.5 -------------
+
+Изменения:
+1) Изменилась структура БД. Таблица Levels не используется.
+   Все функции перекочевали в LevelPoints. Meta для импорта подправлена;
+2) Добавился импорт данных с терминалов считывания штрих-кодов;
+3) Подключение сканера штрих-кодов напрямую к планшету полностью удалено;
+4) Введено понятие ScanPoint - точка, где считываются штрих-коды.
+   Команды с двух дистанций приходят на одну ScanPoint, при этом
+   у них разные LevelPoint. Дистанция определяется по номеру команды.
+   Номер команды уникален внутри ММБ.
+   
+Доработки:
+1) Реализован расчёт результатов.
+
 ------------- terminal-v1.4 -------------
 
 Проект переведён на API-18, с поддержкой версий до API-7;
