--- a/datacollector/app/src/main/res/values-ru/strings.xml
+++ b/datacollector/app/src/main/res/values-ru/strings.xml
@@ -2,15 +2,19 @@
 <resources>
 
     <string name="app_name">ММБ-терминал</string>
+
     <string name="global_input_mode_start">Старт</string>
     <string name="global_input_mode_finish">Финиш</string>
+
     <string name="main_database_file">Файл БД: %s</string>
     <string name="main_database_connection_NOK">Нет подключения к БД</string>
     <string name="main_database_connection_OK">Есть подключение к БД</string>
     <string name="main_user_id">ID пользователя: %d</string>
     <string name="main_device_id">ID устройства: %d</string>
     <string name="main_current_raid_id">ID текущего ММБ: %d</string>
+    <string name="main_application_mode">Режим работы: %s</string>
     <string name="main_input_data">Ввод данных</string>
+    <string name="main_transport">Транспорт</string>
     <string name="main_import_data">Импорт</string>
     <string name="main_import_barcode_data">Импорт штрих-кодов</string>
     <string name="main_export_data">Экспорт</string>
@@ -18,15 +22,59 @@
     <string name="main_results">Результаты</string>
     <string name="main_settings">Настройки</string>
     <string name="main_progress_loading">Загрузка...</string>
-    <string name="results_team_report">Отчёт по команде</string>
-    <string name="results_group_report">Полный отчёт </string>
-    <string name="input_start_select_scan_point">Выбор точки ввода</string>
+
+    <string name="settings_title">Настройки</string>
+    <string name="settings_path_to_db">Файл DB:</string>
+    <string name="settings_select_db_file">Выбрать файл</string>
+    <string name="settings_import_device_json">Импорт device.json</string>
+    <string name="settings_device_id">Device ID:</string>
+    <string name="settings_user_id">User ID:</string>
+    <string name="settings_current_raid_id">ID текущего ММБ:</string>
+    <string name="settings_last_export_date">Последняя дата экспорта:</string>
+    <string name="settings_transp_user_id">Transport user ID:</string>
+    <string name="settings_transp_user_password">Transport user password:</string>
+    <string name="settings_team_clear_filter">Очищать фильтр после успешного ввода:</string>
+    <string name="settings_team_fast_select">Режим быстрого выбора команды:</string>
+    <string name="settings_applied">Настройки сохранены</string>
+    <string name="settings_json_dialog_title">Выбор планшета</string>
+    <string name="settings_application_mode">Режим работы:</string>
+    <string name="settings_application_mode_input">ВВОД ДАННЫХ</string>
+    <string name="settings_application_mode_report">ОТЧЁТЫ</string>
+
+    <string name="input_global_no_selected_scan_point">&lt;Точка ввода не выбрана></string>
     <string name="input_start_no_scan_point">&lt;Точка ввода не выбрана></string>
-    <string name="input_start_proceed_input">Ввод данных</string>
-    <string name="input_global_no_selected_scan_point">&lt;Не выбрана точка ввода></string>
+    <string name="input_start_select_scan_point">Выбор точки ввода</string>
+    <string name="input_start_work_with_logger">Работа со сканерами штрих-кодов</string>
+    <string name="input_start_proceed_input">Ввод данных по КП и сходам</string>
+
     <string name="input_scan_point_scan_point">Точка ввода:</string>
     <string name="input_scan_point_prompt_scan_point">Выберите точку ввода</string>
     <string name="input_scan_point_ok">ОК</string>
+
+    <string name="input_global_no_selected_logger">&lt;LOGGER не выбран></string>
+    <string name="input_bclogger_start_no_logger">&lt;LOGGER не выбран></string>
+    <string name="input_bclogger_start_select_logger">Выберите LOGGER</string>
+    <string name="input_bclogger_start_settings">Настройки</string>
+    <string name="input_bclogger_start_load_data">Загрузка данных</string>
+
+    <string name="input_bclogger_select_title">LOGGER:</string>
+    <string name="input_bclogger_select_prompt_logger">Выберите LOGGER</string>
+    <string name="input_bclogger_select_ok">OK</string>
+
+    <string name="transport_input_import_dictionaries">Импорт данных ММБ</string>
+    <string name="transport_input_send_to_server">Отправить RAW на сервер</string>
+    <string name="transport_input_send_logger_data">Отправить RAW данные сканеров</string>
+    <string name="transport_input_save_data_to_file">Сохранить RAW в файл</string>
+
+    <string name="transport_report_import_dictionaries">Импорт данных ММБ</string>
+    <string name="transport_report_receive_from_server">Получить с сервера</string>
+    <string name="transport_report_receive_logger_data">Получить данные сканеров</string>
+
+    <string name="results_team_report">Отчёт по команде</string>
+    <string name="results_group_report">Полный отчёт </string>
+
+
+
     <string name="input_history_team_number">Номер команды:</string>
     <string name="input_history_team_not_found">Команда [${teamNumber}] не найдена</string>
     <string name="input_data_no_team">&lt;Команда не выбрана></string>
@@ -73,20 +121,7 @@
     <string name="transp_import_no_table">&lt;Неизвестна></string>
     <string name="transp_import_rows_processed">Обработано строк:</string>
     <string name="transp_import_no_rows">&lt;Неизвестно></string>
-    <string name="settings_title">Настройки</string>
-    <string name="settings_path_to_db">Файл DB:</string>
-    <string name="settings_select_db_file">Выбрать файл</string>
-    <string name="settings_import_device_json">Импорт device.json</string>
-    <string name="settings_device_id">Device ID:</string>
-    <string name="settings_user_id">User ID:</string>
-    <string name="settings_current_raid_id">ID текущего ММБ:</string>
-    <string name="settings_last_export_date">Последняя дата экспорта:</string>
-    <string name="settings_transp_user_id">Transport user ID:</string>
-    <string name="settings_transp_user_password">Transport user password:</string>
-    <string name="settings_team_clear_filter">Очищать фильтр после успешного ввода:</string>
-    <string name="settings_team_fast_select">Режим быстрого выбора команды:</string>
-    <string name="settings_applied">Настройки сохранены</string>
-    <string name="settings_json_dialog_title">Выбор планшета</string>
+
     <string name="transp_export_title">Экспорт</string>
     <string name="transp_export_data_title">Экспорт данных</string>
     <string name="transp_export_data_full">Полный</string>
