--- a/datacollector/app/src/main/res/values/strings.xml
+++ b/datacollector/app/src/main/res/values/strings.xml
@@ -2,15 +2,19 @@
 <resources>
 
     <string name="app_name">MMB datacollector</string>
+
     <string name="global_input_mode_start">Start</string>
     <string name="global_input_mode_finish">Finish</string>
+
     <string name="main_database_file">Database file: %s</string>
     <string name="main_database_connection_NOK">Not connected to DB</string>
     <string name="main_database_connection_OK">Connected to DB</string>
     <string name="main_user_id">User ID: %d</string>
     <string name="main_device_id">Device ID: %d</string>
     <string name="main_current_raid_id">Current raid ID: %d</string>
+    <string name="main_application_mode">Application mode: %s</string>
     <string name="main_input_data">Input data</string>
+    <string name="main_transport">Transport</string>
     <string name="main_import_data">Import</string>
     <string name="main_import_barcode_data">Import barcodes</string>
     <string name="main_export_data">Export</string>
@@ -19,15 +23,59 @@
     <string name="main_settings">Settings</string>
     <string name="main_fill_data">Fill test data</string>
     <string name="main_progress_loading">Loading...</string>
-    <string name="results_team_report">Team report</string>
-    <string name="results_group_report">Group report</string>
-    <string name="input_start_select_scan_point">Select input point</string>
-    <string name="input_start_no_scan_point">&lt;No input point selected></string>
-    <string name="input_start_proceed_input">Proceed input</string>
+
+    <string name="settings_title">Settings</string>
+    <string name="settings_path_to_db">DB file:</string>
+    <string name="settings_select_db_file">Select file</string>
+    <string name="settings_import_device_json">Import device.json</string>
+    <string name="settings_device_id">Device ID:</string>
+    <string name="settings_user_id">User ID:</string>
+    <string name="settings_current_raid_id">Current raid ID:</string>
+    <string name="settings_last_export_date">Last export:</string>
+    <string name="settings_transp_user_id">Transport user ID:</string>
+    <string name="settings_transp_user_password">Transport user password:</string>
+    <string name="settings_team_clear_filter">Clear team filter after OK:</string>
+    <string name="settings_team_fast_select">Fast team select:</string>
+    <string name="settings_applied">Settings applied</string>
+    <string name="settings_json_dialog_title">Select device</string>
+    <string name="settings_application_mode">Application mode:</string>
+    <string name="settings_application_mode_input">INPUT</string>
+    <string name="settings_application_mode_report">REPORT</string>
+
     <string name="input_global_no_selected_scan_point">&lt;No input point selected></string>
+    <string name="input_start_no_scan_point">&lt;No input point selected></string>
+    <string name="input_start_select_scan_point">Select input point</string>
+    <string name="input_start_work_with_logger">Work with barcode scanners</string>
+    <string name="input_start_proceed_input">Input checkpoints and dismissed</string>
+
     <string name="input_scan_point_scan_point">Input point:</string>
     <string name="input_scan_point_prompt_scan_point">Select input point</string>
     <string name="input_scan_point_ok">OK</string>
+
+    <string name="input_global_no_selected_logger">&lt;No logger selected></string>
+    <string name="input_bclogger_start_no_logger">&lt;No logger selected></string>
+    <string name="input_bclogger_start_select_logger">Select logger</string>
+    <string name="input_bclogger_start_settings">Logger settings</string>
+    <string name="input_bclogger_start_load_data">Load data from logger</string>
+
+    <string name="input_bclogger_select_title">LOGGER:</string>
+    <string name="input_bclogger_select_prompt_logger">Select LOGGER</string>
+    <string name="input_bclogger_select_ok">OK</string>
+
+    <string name="transport_input_import_dictionaries">Import raid data</string>
+    <string name="transport_input_send_to_server">Send RAW to server</string>
+    <string name="transport_input_send_logger_data">Send RAW scans to reporter</string>
+    <string name="transport_input_save_data_to_file">Save RAW to file</string>
+
+    <string name="transport_report_import_dictionaries">Import raid data</string>
+    <string name="transport_report_receive_from_server">Receive from server</string>
+    <string name="transport_report_receive_logger_data">Receive scans data</string>
+
+    <string name="results_team_report">Team report</string>
+    <string name="results_group_report">Group report</string>
+
+
+
     <string name="input_history_team_number">Team number:</string>
     <string name="input_history_team_not_found">Team [${teamNumber}] not found</string>
     <string name="input_data_no_team">&lt;No team selected></string>
@@ -73,20 +121,7 @@
     <string name="transp_import_no_table">&lt;Unknown></string>
     <string name="transp_import_rows_processed">Rows processed:</string>
     <string name="transp_import_no_rows">&lt;Unknown></string>
-    <string name="settings_title">Settings</string>
-    <string name="settings_path_to_db">DB file:</string>
-    <string name="settings_select_db_file">Select file</string>
-    <string name="settings_import_device_json">Import device.json</string>
-    <string name="settings_device_id">Device ID:</string>
-    <string name="settings_user_id">User ID:</string>
-    <string name="settings_current_raid_id">Current raid ID:</string>
-    <string name="settings_last_export_date">Last export:</string>
-    <string name="settings_transp_user_id">Transport user ID:</string>
-    <string name="settings_transp_user_password">Transport user password:</string>
-    <string name="settings_team_clear_filter">Clear team filter after OK:</string>
-    <string name="settings_team_fast_select">Fast team select:</string>
-    <string name="settings_applied">Settings applied</string>
-    <string name="settings_json_dialog_title">Select device</string>
+
     <string name="transp_export_title">Export</string>
     <string name="transp_export_data_title">Export data</string>
     <string name="transp_export_data_full">Export full</string>
